@startuml

skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false


class WorkbookService
class WorkbookView

class Workbook {
	- List<Spreadsheet> spreadsheets
}

interface Spreadsheet
interface Cell


Spreadsheet <|-- Workbook
Cell <|-- Spreadsheet
Workbook <|-- WorkbookService
WorkbookService <|-- WorkbookView
@enduml
